--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,10 +1,11 @@
-<header class="flex justify-between items-center py-3 w-[1120px]">
-    <img class="rounded-full w-12 h-12" src="../imagen/me.jpg" alt="xaviFoto">
+<header class="flex justify-between items-center  py-5 w-full xl:w-[1120px] mx-auto">
+    <img class="rounded-full size-32" src="../imagen/me.jpg" alt="xaviFoto">
 
-    <nav class="flex flex-row gap-x-10 opacity-80">
-        <a href="/">Home</a>
-        <a href="/about">About</a>
-        <a href="/projects">Proyectos</a>
-        <a href="/contact">Contacto</a>
+    <nav class="flex flex-col mr-39 mt-10 gap-x-10 lg:flex-row lg:m-0 md:flex-row md:mr-19 opacity-80">
+        <a href="#top">Inicio</a>
+        <a href="#experiencia">Experiencia</a>
+        <a href="#proyectos">Proyectos</a>
+        <a href="#sobre-mi">Sobre mi</a>
+        <a href="#contacto">Contacto</a>
     </nav>
 </header>
