--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,43 +1,49 @@
 ---
-import Header from '../components/Header.astro';
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 
 interface Props {
-	title: string;
+  title: string;
+  description: string;
 }
 
-const { title } = Astro.props;
+const {description, title } = Astro.props;
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<Header />
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="{description}" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body class="bg-neutral-950 " >
+    <div
+      class="absolute top-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"
+    >
+    </div>
+    <Header />
+    <slot />
+    <Footer />
+  </body>
 </html>
 <style is:global>
-	:root {
-		color:  white;
-	}
-	html {
-		font-family: 'Onest Variable', sans-serif;
-		
-		
-	}
-	body{
-		display: flex;
-		flex-direction: column;
-		/* justify-content: center; */
-		align-items: center;
-		background: #050505;
-		height: 100vh;
-	}
+  :root {
+    color: white;
+  }
+  html {
+    font-family: "Onest Variable", sans-serif;
+  }
+  body {
+    display: flex;
+    flex-direction: column;
+    background: #050505;
+    min-height: 100vh;
+    scroll-behavior: smooth;
+  }
+ 
+ 
 </style>
